fix x-overflow

--- a/packages/webapp/public/global.css
+++ b/packages/webapp/public/global.css
@@ -23,6 +23,10 @@
     --addition: #FFB800;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 /*button{*/
 /*    -webkit-appearance: none;*/
 /*}*/
